--- a/example/css/rasterfari.css
+++ b/example/css/rasterfari.css
@@ -1,8 +1,8 @@
-.grid {
+.rf-grid {
   margin-left: -20px;
   display: block; }
 
-.grid__col {
+.rf-grid__col {
   width: 100%;
   padding-left: 20px;
   -webkit-box-sizing: border-box;
@@ -10,79 +10,79 @@
   box-sizing: border-box;
   display: inline-block;
   vertical-align: top; }
-  .grid__col--1 {
+  .rf-grid__col--1 {
     width: 8.33333%; }
-  .grid__col--2 {
+  .rf-grid__col--2 {
     width: 16.66667%; }
-  .grid__col--3 {
+  .rf-grid__col--3 {
     width: 25%; }
-  .grid__col--4 {
+  .rf-grid__col--4 {
     width: 33.33333%; }
-  .grid__col--5 {
+  .rf-grid__col--5 {
     width: 41.66667%; }
-  .grid__col--6 {
+  .rf-grid__col--6 {
     width: 50%; }
-  .grid__col--7 {
+  .rf-grid__col--7 {
     width: 58.33333%; }
-  .grid__col--8 {
+  .rf-grid__col--8 {
     width: 66.66667%; }
-  .grid__col--9 {
+  .rf-grid__col--9 {
     width: 75%; }
-  .grid__col--10 {
+  .rf-grid__col--10 {
     width: 83.33333%; }
-  .grid__col--11 {
+  .rf-grid__col--11 {
     width: 91.66667%; }
-  .grid__col--12 {
+  .rf-grid__col--12 {
     width: 100%; }
   @media only screen and (min-width: 40em) {
-    .grid__col--1\@medium {
+    .rf-grid__col--1\@medium {
       width: 8.33333%; }
-    .grid__col--2\@medium {
+    .rf-grid__col--2\@medium {
       width: 16.66667%; }
-    .grid__col--3\@medium {
+    .rf-grid__col--3\@medium {
       width: 25%; }
-    .grid__col--4\@medium {
+    .rf-grid__col--4\@medium {
       width: 33.33333%; }
-    .grid__col--5\@medium {
+    .rf-grid__col--5\@medium {
       width: 41.66667%; }
-    .grid__col--6\@medium {
+    .rf-grid__col--6\@medium {
       width: 50%; }
-    .grid__col--7\@medium {
+    .rf-grid__col--7\@medium {
       width: 58.33333%; }
-    .grid__col--8\@medium {
+    .rf-grid__col--8\@medium {
       width: 66.66667%; }
-    .grid__col--9\@medium {
+    .rf-grid__col--9\@medium {
       width: 75%; }
-    .grid__col--10\@medium {
+    .rf-grid__col--10\@medium {
       width: 83.33333%; }
-    .grid__col--11\@medium {
+    .rf-grid__col--11\@medium {
       width: 91.66667%; }
-    .grid__col--12\@medium {
+    .rf-grid__col--12\@medium {
       width: 100%; } }
   @media only screen and (min-width: 64em) {
-    .grid__col--1\@large {
+    .rf-grid__col--1\@large {
       width: 8.33333%; }
-    .grid__col--2\@large {
+    .rf-grid__col--2\@large {
       width: 16.66667%; }
-    .grid__col--3\@large {
+    .rf-grid__col--3\@large {
       width: 25%; }
-    .grid__col--4\@large {
+    .rf-grid__col--4\@large {
       width: 33.33333%; }
-    .grid__col--5\@large {
+    .rf-grid__col--5\@large {
       width: 41.66667%; }
-    .grid__col--6\@large {
+    .rf-grid__col--6\@large {
       width: 50%; }
-    .grid__col--7\@large {
+    .rf-grid__col--7\@large {
       width: 58.33333%; }
-    .grid__col--8\@large {
+    .rf-grid__col--8\@large {
       width: 66.66667%; }
-    .grid__col--9\@large {
+    .rf-grid__col--9\@large {
       width: 75%; }
-    .grid__col--10\@large {
+    .rf-grid__col--10\@large {
       width: 83.33333%; }
-    .grid__col--11\@large {
+    .rf-grid__col--11\@large {
       width: 91.66667%; }
-    .grid__col--12\@large {
+    .rf-grid__col--12\@large {
       width: 100%; } }
 
 .is-pushed-by-1 {
