--- a/example/css/rasterfari.css
+++ b/example/css/rasterfari.css
@@ -1,6 +1,7 @@
 .rf-grid {
   margin-left: -20px;
-  display: block; }
+  display: block;
+  font-size: 0; }
 
 .rf-grid__col {
   width: 100%;
@@ -9,7 +10,8 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   display: inline-block;
-  vertical-align: top; }
+  vertical-align: top;
+  font-size: 16px; }
   .rf-grid__col--1 {
     width: 8.33333%; }
   .rf-grid__col--2 {
