--- a/scss/rasterfari.scss
+++ b/scss/rasterfari.scss
@@ -2,7 +2,7 @@
 // * Settings
 $rasterfari__cols: 12 !default;
 $rasterfari__gutter: 20px !default;
-$rasterfari__namespace: 'rf-';
+$rasterfari__namespace: 'rf-' !default;
 $rasterfari__breakpoints: (
     'medium': '(min-width: 40em)',
     'large': '(min-width: 64em)'
@@ -15,6 +15,7 @@ $rasterfari__breakpoints: (
 .#{$rasterfari__namespace}grid {
     margin-left: -$rasterfari__gutter;
     display: block;
+    font-size: 0;
 }
 
 
@@ -28,7 +29,8 @@ $rasterfari__breakpoints: (
        -moz-box-sizing:border-box;
             box-sizing:border-box;
     display: inline-block;
-    vertical-align:top;
+    vertical-align: top;
+    font-size: 16px;
 
     @for $i from 1 through $rasterfari__cols {
         &--#{$i} {
