Removing default namespace

--- a/scss/rasterfari.scss
+++ b/scss/rasterfari.scss
@@ -2,7 +2,7 @@
 // * Settings
 $rasterfari__cols: 12 !default;
 $rasterfari__gutter: 20px !default;
-$rasterfari__namespace: 'rf-' !default;
+$rasterfari__namespace: '' !default;
 $rasterfari__breakpoints: (
     'medium': '(min-width: 40em)',
     'large': '(min-width: 64em)'
