--- a/example/css/rasterfari.css
+++ b/example/css/rasterfari.css
@@ -2,6 +2,8 @@
   margin-left: -20px;
   display: block;
   font-size: 0; }
+  .grid.has-no-gutter {
+    margin-left: 0; }
 
 .grid__col {
   width: 100%;
@@ -12,6 +14,12 @@
   display: inline-block;
   vertical-align: top;
   font-size: 16px; }
+  .is-middle .grid__col {
+    vertical-align: middle; }
+  .is-bottom .grid__col {
+    vertical-align: bottom; }
+  .has-no-gutter .grid__col {
+    padding-left: 0; }
   .grid__col--1 {
     width: 8.33333%; }
   .grid__col--2 {
